Refatoração model, criação do TransactionService e TransactionController